--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,17 @@
     <string name="repassword">Repetir password</string>
     <string name="correo">Correo electrónico</string>
     <string name="cancelar">Cancelar</string>
+    <string name="miperfil">Mi Perfil</string>
+    <string name="cerrarS">Cerrar Sesión</string>
+    <string name="salir">Salir</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="parque1">Parque Las Chimeneas</string>
+    <string name="parque2">Parque El Artista</string>
+    <string name="mFrag1">Chimeneas</string>
+    <string name="mFrag2">Artista</string>
+    <string name="title_activity_parques">ParquesActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
